Part A & B: Implement bulk allocations and annual budget backend
